============================================================
=== 2015

1.8.6   (2015-10-30)
	Increase API version to 1.4
	Get rid of locarna.hh
	In clustal(-like) alignment output, adapt formatting to long names
	Improve libRNA config, in cases where pkg-config does not work:
	allow compiling without libgomp, if libgomp is unavailable and
	is not used by libRNA
1.8.5a
	Fix behavior in case structure constraints + local folding (see 1.8.2)

1.8.5   (2015-10-10)
	allow empty input sequences/alignments and fix related problems
	fix score of local alignment w/ empty input sequences

1.8.4   (2015-10-6)
	fix potential overwriting of parameters in classes Aligner*,
	which was observed only with gcc-5.2
	fix bug that crashed printing string options in verbose mode
1.8.3
	improve portability for easier installation on recent MacOS X:
	compile without openmp; handle VRNA w/o pkgconf file
	fix c++11 warnings; fix incompatibility with libc++
	fix incompatibility with clang (now used by MacOS X); fix warnings of clang
	remove g++ warnings
1.8.2
        change semantics w.r.t. constraints + local folding:
	    constraints turn off local folding
        reformat change log
	support generating doxygen documentation from
	    distribution by make doxygen-doc
        penalized alignment
        experimental galaxy wrapper generation
1.8.1
	implement ribofit
	Bugfix in OMatrix: incorrect address calculation
	Bugfix: LocARNA crashed while writing the result pp file if
	alignments of zero length are computed with options local file
	output and alifold consensus dp (alifold workaround)
	bugfixes (OMatrix, alifold len 0 bug)
	implement slide rule and conflict rule for f1 and mcc calculation;
	also use default minimal base pair length 3 in class
	ConfusionMatrix; class interface changes slightly

============================================================
=== 2014

1.8.0
	Remove absolute path dependencies in scripts. This changes the